// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@client @export tests should NOT refetch if an @export variable has not changed, the current fetch policy is not cache-only, and the query includes fields that need to be resolved remotely 1`] = `
[MockFunction] {
  "calls": [
    [
      "Missing field 'postCount' while writing result {
  "currentAuthorId": 101
}",
    ],
    [
      "Missing field 'postCount' while writing result {
  "currentAuthorId": 100
}",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`@client @export tests should allow @client @export variables to be used with remote queries 1`] = `
[MockFunction] {
  "calls": [
    [
      "Missing field 'postCount' while writing result {
  "currentAuthor": {
    "name": "John Smith",
    "authorId": 100,
    "__typename": "Author"
  }
}",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`@client @export tests should refetch if an @export variable changes, the current fetch policy is not cache-only, and the query includes fields that need to be resolved remotely 1`] = `
[MockFunction] {
  "calls": [
    [
      "Missing field 'postCount' while writing result {
  "appContainer": {
    "systemDetails": {
      "currentAuthor": {
        "name": "John Smith",
        "authorId": 100,
        "__typename": "Author"
      },
      "__typename": "SystemDetails"
    },
    "__typename": "AppContainer"
  }
}",
    ],
    [
      "Missing field 'title' while writing result {
  "loggedInReviewerId": 100,
  "__typename": "Post",
  "id": 10
}",
    ],
    [
      "Missing field 'reviewerDetails' while writing result {
  "postRequiringReview": {
    "loggedInReviewerId": 100,
    "__typename": "Post",
    "id": 10
  }
}",
    ],
    [
      "Missing field 'id' while writing result {
  "__typename": "Post"
}",
    ],
    [
      "Missing field 'title' while writing result {
  "__typename": "Post"
}",
    ],
    [
      "Missing field 'reviewerDetails' while writing result {
  "postRequiringReview": {
    "__typename": "Post"
  }
}",
    ],
    [
      "Missing field 'post' while writing result {
  "primaryReviewerId": 100,
  "secondaryReviewerId": 200
}",
    ],
    [
      "Missing field 'postCount' while writing result {
  "currentAuthorId": 100
}",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
